# tr1-final-project

./: .gitignore  README.md  config.toml  pyproject.toml
.devcontainer/: devcontainer.json
app/: README.md  __init__.py  app.py  scope.html  simulation.py
app/pages/: __init__.py
docker/: Dockerfile.dev  Dockerfile.node  docker-compose.yml
nodes/ch/: main.py
nodes/rx/: main.py
nodes/tx/: main.py
src/layer_manager/: __init__.py  config.py  factory.py  pipeline.py  protocol.py  types.py  utils.py  wire.py
src/layer_manager/link/: __init__.py  correction.py  detection.py  framing.py
src/layer_manager/phy/: __init__.py  baseband.py  carrier.py  channel.py
tests/: __init__.py  test_app_simulation.py  test_baseband.py  test_carrier.py  test_channel.py  test_correction.py  test_detection.py  test_framing.py  test_pipeline.py  test_utils.py
