[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tr-final-project"
version = "0.1.0"
description = "..."
authors = [{ name = "DaturaSol", email = "daturasoldev@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "nbstripout>=0.9.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/layer_manager"]

[tool.hatch.build.targets.sdist]
include = ["src/layer_manager", "tests", "README.md", "pyproject.toml"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=layer_manager --cov-config=pyproject.toml --cov-report=term-missing"

[tool.coverage.run]
source = ["layer_manager"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["I", "F", "E", "W", "ARG", "B", "UP", "SIM", "N", "RUF", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_explicit = true
